--- a/src/scss/_ax5layout.scss
+++ b/src/scss/_ax5layout.scss
@@ -44,7 +44,7 @@ $font-colors: (
     }
 }
 
-@mixin ax5-ui-layout-theme($border-color, $font-color){
+@mixin ax5-ui-layout-theme($border-color, $font-color) {
 
 }
 
@@ -52,5 +52,34 @@ $font-colors: (
 [data-ax5layout] {
     position: relative;
     background: #eee;
-    [data-dock-panel]{}
+    [data-dock-panel] {
+        position: absolute;
+        border: 1px solid #ccc;
+        &.dock-panel-top {
+            left: 0px;
+            top: 0px;
+            width: 100%;
+        }
+        &.dock-panel-bottom {
+            left: 0px;
+            bottom: 0px;
+            width: 100%;
+        }
+        &.dock-panel-left {
+            left: 0px;
+            top: 0px;
+            height: 100%;
+        }
+        &.dock-panel-right {
+            right: 0px;
+            top: 0px;
+            height: 100%;
+        }
+        &.dock-panel-content {
+            left: 0px;
+            top: 0px;
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
