layout split-panel

--- a/src/scss/_ax5layout.scss
+++ b/src/scss/_ax5layout.scss
@@ -88,7 +88,8 @@ $dock-panel-splitter-background: #ccc;
             z-index: 1;
         }
     }
-    > .dock-panel-splitter{
+    > [data-split-panel] { }
+    > [data-splitter]{
         // @include transition(all 0.3s, $ease-in-out-cubic);
         position: absolute;
         background: $dock-panel-splitter-background;
