split-panel vertical height:"*" bug fix

--- a/src/scss/_ax5layout.scss
+++ b/src/scss/_ax5layout.scss
@@ -93,7 +93,7 @@ $dock-panel-splitter-background: #ccc;
         border: 0px none;
         z-index: 2;
         overflow: auto;
-        background: #eee;
+        //background: #eee;
         &.split-panel-vertical{
             width: 100%;
         }
