--- a/src/scss/_ax5layout_variables.scss
+++ b/src/scss/_ax5layout_variables.scss
@@ -4,4 +4,12 @@
  * - www.axisj.com
  */
 
-$dock-panel-splitter-background: #ccc !default;
+$ax5layout-splitter-background: #ccc !default;
+
+$ax5layout-tab-panel-label-padding-top: 0px !default;
+$ax5layout-tab-panel-label-height: 35px !default;
+$ax5layout-tab-panel-label-item-height: 30px !default;
+
+$ax5layout-tab-panel-label-item-border-top: 0 none;
+$ax5layout-tab-panel-label-item-border-right: 1px solid #D4D4D4;
+$ax5layout-tab-panel-label-item-border-bottom: 1px solid #D4D4D4;
