--- a/src/scss/_ax5layout.scss
+++ b/src/scss/_ax5layout.scss
@@ -82,16 +82,6 @@
         &.split-panel-horizontal {
             height: 100%;
         }
-
-        &[data-split-panel-wrap="scroll"] {
-            overflow: auto;
-        }
-        &[data-split-panel-wrap="scroll-x"] {
-            overflow-x: auto;
-        }
-        &[data-split-panel-wrap="scroll-y"] {
-            overflow-y: auto;
-        }
     }
     > [data-splitter] {
         // @include transition(all 0.3s, $ease-in-out-cubic);
@@ -210,7 +200,22 @@
         &[data-tab-active="true"] {
             display: block;
         }
+    }
 
+    [data-split-panel-wrap="scroll"] {
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+    }
+    [data-split-panel-wrap="scroll-x"] {
+        width: 100%;
+        height: 100%;
+        overflow-x: auto;
+    }
+    [data-split-panel-wrap="scroll-y"] {
+        width: 100%;
+        height: 100%;
+        overflow-y: auto;
     }
 }
 
